UPDATE: 重构 api，修改请求方式与部位，增加 service 层，增加 swagger 注解，增加结构体 valid 验证；将 token 放至请求头；增加 redis 缓存
