# go-gin-example/docs/swagger.yaml
@@ -1,12 +1,18 @@
 definitions:
-  gin.H:
-    additionalProperties: true
+  app.Response:
+    properties:
+      code:
+        type: integer
+      data:
+        type: object
+      msg:
+        type: string
     type: object
 info:
   contact: {}
   license: {}
 paths:
-  /api/v1/articles:
+  /api/v2/articles:
     get:
       parameters:
       - description: TagID
@@ -17,59 +23,83 @@ paths:
         in: query
         name: state
         type: integer
-      - description: CreatedBy
-        in: query
-        name: created_by
-        type: integer
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 获取文章列表
     post:
+      consumes:
+      - multipart/form-data
       parameters:
       - description: TagID
-        in: query
+        in: formData
         name: tag_id
         required: true
         type: integer
       - description: Title
-        in: query
+        in: formData
         name: title
         required: true
         type: string
       - description: Desc
-        in: query
+        in: formData
         name: desc
         required: true
         type: string
       - description: Content
-        in: query
+        in: formData
         name: content
         required: true
         type: string
       - description: CreatedBy
-        in: query
+        in: formData
         name: created_by
         required: true
         type: string
       - description: State
-        in: query
+        in: formData
         name: state
         required: true
         type: integer
+      - description: CoverImageUrl
+        in: formData
+        name: cover_image_url
+        type: string
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 新建文章
-  /api/v1/articles/{id}:
+  /api/v2/articles/{id}:
     delete:
       parameters:
       - description: ID
@@ -77,13 +107,24 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 删除指定文章
     get:
       parameters:
@@ -92,15 +133,28 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 获取指定文章
     put:
+      consumes:
+      - multipart/form-data
       parameters:
       - description: ID
         in: path
@@ -108,45 +162,59 @@ paths:
         required: true
         type: integer
       - description: TagID
-        in: body
+        in: formData
         name: tag_id
-        schema:
-          type: string
+        required: true
+        type: string
       - description: Title
-        in: body
+        in: formData
         name: title
-        schema:
-          type: string
+        required: true
+        type: string
       - description: Desc
-        in: body
+        in: formData
         name: desc
-        schema:
-          type: string
+        required: true
+        type: string
       - description: Content
-        in: body
+        in: formData
         name: content
-        schema:
-          type: string
+        required: true
+        type: string
       - description: ModifiedBy
-        in: body
+        in: formData
         name: modified_by
         required: true
-        schema:
-          type: string
+        type: string
       - description: State
-        in: body
+        in: formData
         name: state
-        schema:
-          type: integer
+        required: true
+        type: integer
+      - description: CoverImageUrl
+        in: formData
+        name: cover_image_url
+        type: string
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 更新指定文章
-  /api/v1/tags:
+  /api/v2/tags:
     get:
       parameters:
       - description: Name
@@ -157,38 +225,64 @@ paths:
         in: query
         name: state
         type: integer
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
+      summary: 获取标签列表
     post:
+      consumes:
+      - multipart/form-data
       parameters:
       - description: Name
-        in: query
+        in: formData
         name: name
         required: true
         type: string
-      - description: State
-        in: query
-        name: state
-        type: integer
       - description: CreatedBy
-        in: query
+        in: formData
         name: created_by
         required: true
+        type: string
+      - description: State
+        in: formData
+        name: state
+        required: true
         type: integer
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 新建文章标签
-  /api/v1/tags/{id}:
+  /api/v2/tags/{id}:
     delete:
       parameters:
       - description: ID
@@ -196,15 +290,28 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Authorization
+        in: header
+        name: x-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 删除指定标签
     put:
+      consumes:
+      - multipart/form-data
       parameters:
       - description: ID
         in: path
@@ -212,25 +319,86 @@ paths:
         required: true
         type: integer
       - description: Name
-        in: query
+        in: formData
         name: name
         required: true
         type: string
-      - description: State
-        in: query
-        name: state
-        type: integer
       - description: ModifiedBy
-        in: query
+        in: formData
         name: modified_by
+        required: true
+        type: string
+      - description: State
+        in: formData
+        name: state
+        required: true
+        type: integer
+      - description: Authorization
+        in: header
+        name: x-token
         required: true
         type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            $ref: '#/definitions/gin.H'
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - x-token: []
       summary: 更新指定标签
+  /auth:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: username
+        in: formData
+        name: username
+        required: true
+        type: string
+      - description: password
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 获取 token
+  /upload:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: Image File
+        in: formData
+        name: image
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 上传图片
 swagger: "2.0"
