# go-gin-example/models/auth.go
@@ -1,17 +1,23 @@
 package models
 
+import "github.com/jinzhu/gorm"
+
 type Auth struct {
 	ID       int    `gorm:"primary_key" json:"id"`
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
 
-func CheckAuth(username, password string) bool {
+func CheckAuth(username, password string) (bool, error) {
 	var auth Auth
-	db.Select("id").Where(Auth{
+	err := db.Select("id").Where(Auth{
 		Username: username,
 		Password: password,
-	}).First(&auth)
+	}).First(&auth).Error
 
-	return auth.ID > 0
+	if err != nil && err != gorm.ErrRecordNotFound {
+		return false, err
+	}
+
+	return auth.ID > 0, nil
 }
