# go-gin-example/routers/api/upload.go
@@ -3,57 +3,61 @@ package api
 import (
 	"net/http"
 
+	"github.com/PeiLeizzz/go-gin-example/pkg/app"
 	"github.com/PeiLeizzz/go-gin-example/pkg/e"
 	"github.com/PeiLeizzz/go-gin-example/pkg/logging"
 	"github.com/PeiLeizzz/go-gin-example/pkg/upload"
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary 上传图片
+// @Produce  json
+// @Accept mpfd
+// @Param image formData file true "Image File"
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
+// @Router /upload [post]
 func UploadImage(c *gin.Context) {
-	code := e.SUCCESS
-	data := make(map[string]string)
+	appG := app.Gin{C: c}
 
 	// 获取上传的文件，返回提供的表单键的第一个文件
 	file, image, err := c.Request.FormFile("image")
 	if err != nil {
 		logging.Warn(err)
-		code = e.ERROR
-		c.JSON(http.StatusOK, gin.H{
-			"code": code,
-			"msg":  e.GetMsg(code),
-			"data": data,
-		})
+		appG.Response(http.StatusInternalServerError, e.ERROR, nil)
 		return
 	}
 
 	if image == nil {
-		code = e.INVALID_PARMAS
-	} else {
-		imageName := upload.GetImageName(image.Filename)
-		fullPath := upload.GetImageFullPath()
-		savePath := upload.GetImagePath()
-
-		src := fullPath + imageName
-		if !upload.CheckImageExt(imageName) || !upload.CheckImageSize(file) {
-			code = e.ERROR_UPLOAD_CHECK_IMAGE_FORMAT
-		} else {
-			err := upload.CheckImage(fullPath)
-			if err != nil {
-				logging.Warn(err)
-				code = e.ERROR_UPLOAD_CHECK_IMAGE_FAIL
-			} else if err = c.SaveUploadedFile(image, src); err != nil {
-				logging.Warn(err)
-				code = e.ERROR_UPLOAD_SAVE_IMAGE_FAIL
-			} else {
-				data["image_url"] = upload.GetImageFullUrl(imageName)
-				data["image_save_url"] = savePath + imageName
-			}
-		}
+		appG.Response(http.StatusBadRequest, e.INVALID_PARMAS, nil)
+		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"code": code,
-		"msg":  e.GetMsg(code),
-		"data": data,
-	})
+	imageName := upload.GetImageName(image.Filename)
+	fullPath := upload.GetImageFullPath()
+	savePath := upload.GetImagePath()
+	src := fullPath + imageName
+
+	if !upload.CheckImageExt(imageName) || !upload.CheckImageSize(file) {
+		appG.Response(http.StatusBadRequest, e.ERROR_UPLOAD_CHECK_IMAGE_FORMAT, nil)
+		return
+	}
+
+	if err = upload.CheckImage(fullPath); err != nil {
+		logging.Warn(err)
+		appG.Response(http.StatusInternalServerError, e.ERROR_UPLOAD_CHECK_IMAGE_FAIL, nil)
+		return
+	}
+
+	if err = c.SaveUploadedFile(image, src); err != nil {
+		logging.Warn(err)
+		appG.Response(http.StatusInternalServerError, e.ERROR_UPLOAD_SAVE_IMAGE_FAIL, nil)
+		return
+	}
+
+	data := map[string]string{}
+	data["image_url"] = upload.GetImageFullUrl(imageName)
+	data["image_save_url"] = savePath + imageName
+
+	appG.Response(http.StatusOK, e.SUCCESS, data)
 }
