# go-gin-example/routers/api/v1/auth.go
@@ -1,0 +1,58 @@
+package v1
+
+import (
+	"net/http"
+
+	"github.com/PeiLeizzz/go-gin-example/models"
+	"github.com/PeiLeizzz/go-gin-example/pkg/e"
+	"github.com/PeiLeizzz/go-gin-example/pkg/logging"
+	"github.com/PeiLeizzz/go-gin-example/pkg/util"
+	"github.com/astaxie/beego/validation"
+	"github.com/gin-gonic/gin"
+)
+
+type auth struct {
+	Username string `valid:"Required; MaxSize(50)"`
+	Password string `valid:"Required; MaxSize(50)"`
+}
+
+func GetAuth(c *gin.Context) {
+	username := c.Query("username")
+	password := c.Query("password")
+
+	valid := validation.Validation{}
+	a := auth{
+		Username: username,
+		Password: password,
+	}
+	ok, _ := valid.Valid(&a)
+
+	data := make(map[string]interface{})
+	code := e.INVALID_PARMAS
+
+	if ok {
+		// 登陆后才能获取 token
+		isExist := models.CheckAuth(username, password)
+		if isExist {
+			token, err := util.GenerateToken(username, password)
+			if err != nil {
+				code = e.ERROR_AUTH_TOKEN
+			} else {
+				data["token"] = token
+				code = e.SUCCESS
+			}
+		} else {
+			code = e.ERROR_AUTH
+		}
+	} else {
+		for _, err := range valid.Errors {
+			logging.Info(err.Key, err.Message)
+		}
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": data,
+	})
+}
