# go-gin-example/routers/api/v1/tag.go
@@ -13,12 +13,14 @@ import (
 	"github.com/unknwon/com"
 )
 
-// 获取标签列表 GET("/tags?name=&state=&page=")
-// @Produce  json
-// @Param name query string false "Name"
-// @Param state query int false "State"
-// @Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/tags [get]
+/*
+获取标签列表 GET("/tags?name=&state=&page=")
+Produce  json
+Param name query string false "Name"
+Param state query int false "State"
+Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
+Router /api/v1/tags [get]
+*/
 func GetTags(c *gin.Context) {
 	name := c.Query("name")
 
@@ -57,13 +59,15 @@ func GetTags(c *gin.Context) {
 	})
 }
 
-// @Summary 新建文章标签
-// @Produce  json
-// @Param name query string true "Name"
-// @Param state query int false "State"
-// @Param created_by query int true "CreatedBy"
-// @Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/tags [post]
+/*
+Summary 新建文章标签
+Produce  json
+Param name query string true "Name"
+Param state query int false "State"
+Param created_by query int true "CreatedBy"
+Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
+Router /api/v1/tags [post]
+*/
 func AddTag(c *gin.Context) {
 	name := c.Query("name")
 	state := com.StrTo(c.DefaultQuery("state", "0")).MustInt()
@@ -97,14 +101,16 @@ func AddTag(c *gin.Context) {
 	})
 }
 
-// @Summary 更新指定标签
-// @Produce  json
-// @Param id path int true "ID"
-// @Param name query string true "Name"
-// @Param state query int false "State"
-// @Param modified_by query string true "ModifiedBy"
-// @Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/tags/{id} [put]
+/*
+Summary 更新指定标签
+Produce  json
+Param id path int true "ID"
+Param name query string true "Name"
+Param state query int false "State"
+Param modified_by query string true "ModifiedBy"
+Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
+Router /api/v1/tags/{id} [put]
+*/
 func EditTag(c *gin.Context) {
 	id := com.StrTo(c.Param("id")).MustInt()
 	name := c.Query("name")
@@ -153,11 +159,13 @@ func EditTag(c *gin.Context) {
 	})
 }
 
-// @Summary 删除指定标签
-// @Produce  json
-// @Param id path int true "ID"
-// @Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/tags/{id} [delete]
+/*
+Summary 删除指定标签
+Produce  json
+Param id path int true "ID"
+Success 200 {object} gin.H "{"code":200,"data":{},"msg":"ok"}"
+Router /api/v1/tags/{id} [delete]
+*/
 func DeleteTag(c *gin.Context) {
 	id := com.StrTo(c.Param("id")).MustInt()
 
